# ROS-Industrial_EU_Fall19_MoveIt

./: README.md  panda_robot_env.rosinstall  prepare_workspace.sh
ignored/panda_env_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ignored/panda_env_moveit_config/config/: ompl_planning.yaml  panda.srdf
ignored/panda_env_moveit_config/launch/: chomp_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml
panda_env_bringup/: CMakeLists.txt  README.md  package.xml
panda_env_bringup/config/: panda_jog_arm.yaml  ros_controllers.yaml  start_position.yaml
panda_env_bringup/launch/: jog_arm.launch  panda_env_bringup.launch  panda_env_bringup.rviz  panda_jog_arm.launch
panda_env_bringup/rviz/: panda_env_bringup.rviz
panda_env_bringup/scripts/: interactive_marker.py
panda_env_description/: CMakeLists.txt  README.md  package.xml
panda_env_description/launch/: panda_upload.launch.xml
panda_env_description/urdf/: panda_robot_env.urdf.xacro
panda_env_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml
panda_env_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  panda_moveit_controller_manager.launch.xml  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml
panda_env_mtc_demo/: CMakeLists.txt  package.xml
panda_env_mtc_demo/launch/: panda_env_demo.launch
(+2 files in other folders)
