<?xml version="1.0"?>
<package format="2">
  <name>panda_env_bringup</name>
  <version>0.0.0</version>
  <description>The panda_env_bringup package</description>

  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
